--- a/index.html
+++ b/index.html
@@ -31,6 +31,55 @@
         through technical expertise and creativity.
       </p>
     </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      <div class="skills-container">
+        <div class="skill">
+          <i class="fab fa-html5"></i>
+          <p>HTML5</p>
+        </div>
+        <div class="skill">
+          <i class="fab fa-css3-alt"></i>
+          <p>CSS3</p>
+        </div>
+        <div class="skill">
+          <i class="fab fa-js"></i>
+          <p>JavaScript</p>
+        </div>
+        <div class="skill">
+          <i class="fab fa-react"></i>
+          <p>ReactJS</p>
+        </div>
+        <div class="skill">
+          <i class="fab fa-bootstrap"></i>
+          <p>Bootstrap</p>
+        </div>
+        <div class="skill">
+          <i class="fas fa-code"></i>
+          <p>Tailwind CSS</p>
+        </div>
+        <div class="skill">
+          <i class="fab fa-github"></i>
+          <p>GitHub</p>
+        </div>
+        <div class="skill">
+          <i class="fab fa-npm"></i>
+          <p>Redux</p>
+        </div>
+      </div>
+    </section>
+    
+
+
+
+
+
+
+
+
+
+
     <section id="projects">
       <h2>Projects</h2>
       <div class="project">
