--- a/index.html
+++ b/index.html
@@ -67,8 +67,21 @@
           <i class="fab fa-npm"></i>
           <p>Redux</p>
         </div>
+        <div class="skill">
+          <i class="fab fa-node-js"></i>
+          <p>Node.js</p>
+        </div>
+        <div class="skill">
+          <i class="fab fa-js-square"></i>
+          <p>TypeScript</p>
+        </div>
+        <div class="skill">
+          <i class="fas fa-server"></i>
+          <p>Express.js</p>
+        </div>
       </div>
     </section>
+    
     
 
 
