--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
           <i class="fab fa-node-js"></i>
           <p>Node.js</p>
         </div>
-        <div class="skill">
-          <i class="fab fa-js-square"></i>
+        <!-- <div class="skill">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="TypeScript Icon" class="icon"/>
           <p>TypeScript</p>
-        </div>
+        </div> -->
         <div class="skill">
           <i class="fas fa-server"></i>
           <p>Express.js</p>
@@ -82,8 +82,6 @@
       </div>
     </section>
     
-    
-
 
 
 
