--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prashant Singh | Portfolio</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
@@ -14,10 +17,15 @@
   <body>
     <header class="header">
       <div class="header-content">
-        <h1> Hi There! I'm Prashant Singh</h1>
+        <h1>Hi There! I'm Prashant Singh</h1>
         <p>Front-End Developer</p>
         <a href="#contact" class="cta-button">Contact Me</a>
-        <a href="https://drive.google.com/file/d/1VQC19d0SctW1uZnr6zpq49Esl2p2VzNE/view?usp=drive_link" class="cta-button" target="_main">Resume</a>
+        <a
+          href="https://drive.google.com/file/d/1hlh9GlHbCMEIvsf7vYw_fq1eOVUni9Yb/view?usp=sharing"
+          class="cta-button"
+          target="_main"
+          >Resume</a
+        >
       </div>
     </header>
     <section id="about">
@@ -81,15 +89,6 @@
         </div>
       </div>
     </section>
-    
-
-
-
-
-
-
-
-
 
     <section id="projects">
       <h2>Projects</h2>
@@ -274,20 +273,19 @@
       </div>
     </section>
     <footer id="contact">
-        <div id="contactinfo">
-          <p>
-            Contact me at: 
-            <a href="mailto:ps833256@gmail.com">ps833256@gmail.com</a>
-          </p>
-          <p>Contact me at: +91 9711157616</p>
-          <a href="https://github.com/ps833256" target="_main">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="https://linkedin.com/in/prashant-singh-833256" target="_main">
-            <i class="fab fa-linkedin"></i>
-          </a>
-        </div>
-      </footer>
-      
+      <div id="contactinfo">
+        <p>
+          Contact me at:
+          <a href="mailto:ps833256@gmail.com">ps833256@gmail.com</a>
+        </p>
+        <p>Contact me at: +91 9711157616</p>
+        <a href="https://github.com/ps833256" target="_main">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://linkedin.com/in/prashant-singh-833256" target="_main">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
